--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,7 @@
                     alert('저장되었습니다.');
                 }
                 if (data.status === 'too_much') {
-                    alert('입력된 인원이 2명을 초과합니다. 입력을 취소합니다.')
+                    alert('입력된 인원이 2명을 초과합니다. 입력을 취소합니다.');
                 }
             });
         }
